add html & scss

--- a/app/assets/index.html
+++ b/app/assets/index.html
@@ -2,14 +2,125 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Webpack</title>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Cy Travels</title>
     <link rel="stylesheet" href="css/style.css" />
 </head>
 
 <body>
-    <h1>Hello Webpack!</h1>
+    <main class="main">
+        <section class="intro" id="intro">
+            <header class="header">
+                <div class="header__content">
+                    <h1 class="header__content__title">
+                        Cap sur le grand large
+                    </h1>
+                </div>
+            </header>
+        </section>
+        <section class="articles" id="articles">
+            <article class="article">
+                <img src="https://source.unsplash.com/500x400/?island" alt="island" class="article__img" />
+                <div class="article__content">
+                    <h2 class="article__content__title">
+                        Une rencontre inattendue
+                    </h2>
+                    <p class="article__content__text">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                        Quibusdam, velit nam in molestias iste temporibus doloribus animi
+                        aperiam, explicabo ad laboriosam debitis iure. Fugiat, iure
+                        temporibus. Sint dignissimos laborum illum.
+                    </p>
+                    <a href="" class="button">Lire la suite</a>
+                </div>
+            </article>
+            <article class="article">
+                <img src="https://source.unsplash.com/500x400/?sea" alt="island" class="article__img" />
+                <div class="article__content">
+                    <h2 class="article__content__title">
+                        Escapade gourmande
+                    </h2>
+                    <p class="article__content__text">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                        Quibusdam, velit nam in molestias iste temporibus doloribus animi
+                        aperiam, explicabo ad laboriosam debitis iure. Fugiat, iure
+                        temporibus. Sint dignissimos laborum illum.
+                    </p>
+                    <a href="" class="button">Lire la suite</a>
+                </div>
+            </article>
+            <article class="article">
+                <img src="https://source.unsplash.com/500x400/?boat" alt="island" class="article__img" />
+                <div class="article__content">
+                    <h2 class="article__content__title">
+                        Le paradis ?
+                    </h2>
+                    <p class="article__content__text">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                        Quibusdam, velit nam in molestias iste temporibus doloribus animi
+                        aperiam, explicabo ad laboriosam debitis iure. Fugiat, iure
+                        temporibus. Sint dignissimos laborum illum.
+                    </p>
+                    <a href="" class="button">Lire la suite</a>
+                </div>
+            </article>
+        </section>
+        <section class="values" id="values">
+            <div class="values__list">
+                <div class="value">
+                    <h3 class="value__title">Escales</h3>
+                    <p class="value__content">19</p>
+                </div>
+                <div class="value">
+                    <h3 class="value__title">Semaines en mer</h3>
+                    <p class="value__content">123</p>
+                </div>
+                <div class="value">
+                    <h3 class="value__title">Rencontres</h3>
+                    <p class="value__content">214</p>
+                </div>
+            </div>
+            <div class="values__text">
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugiat,
+                    voluptatibus molestiae doloremque quia placeat dicta ullam hic
+                    molestias perspiciatis? Rem voluptas expedita ipsam temporibus
+                    perspiciatis natus possimus ipsa aperiam nulla.
+                </p>
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugiat,
+                    voluptatibus molestiae doloremque quia placeat dicta ullam hic
+                    molestias perspiciatis? Rem voluptas expedita ipsam temporibus
+                    perspiciatis natus possimus ipsa aperiam nulla.
+                </p>
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugiat,
+                    voluptatibus molestiae doloremque quia placeat dicta ullam hic
+                    molestias perspiciatis? Rem voluptas expedita ipsam temporibus
+                    perspiciatis natus possimus ipsa aperiam nulla.
+                </p>
+            </div>
+        </section>
+    </main>
+
+    <aside class="sidebar">
+        <div class="logo">Cy Travels</div>
+        <nav class="navigation">
+            <ul>
+                <li class="navigation__item">
+                    <a href="#intro">Intro</a>
+                </li>
+                <li class="navigation__item">
+                    <a href="#articles">Articles</a>
+                </li>
+                <li class="navigation__item">
+                    <a href="#values">Les valeurs</a>
+                </li>
+            </ul>
+        </nav>
+    </aside>
+
     <script src="js/app.js"></script>
 </body>
 
